--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "stylelint": {
     "extends": "stylelint-config-standard",
-    "rules": {}
+    "rules": {
+      "indentation": "tab"
+    }
   }
 }
